syntax = "proto3"; 
//protoc --go_out=. message.proto
package im;

message Header {
  //address base58 encoded
  uint32 checkSum = 1;
}

message InfoMsg {
  Header header = 1;
  string text = 2;
}

message LoginMsg1 {
  Header header = 1;
  string publicKey = 2;
}

message LoginMsg2 {
  Header header = 1;
  bytes encryptedText = 2;
}

//for test usage
message LoginMsg3 {
  Header header = 1;
  bytes decryptedText = 2;
}

message UserProfileRequestMsg {
  Header header = 1;
  string userID = 2;
}

message UserProfileResponseMsg {
  Header header = 1;
  string userID = 2;
  string publicKey = 3;
	string displayName = 4;
	string discription = 5;
	bytes avatar = 6;
}

message UpdateProfileRequestMsg {
  Header header = 1;
  string displayName = 2;
  string discription = 3;
  bytes avatar = 4;
}

message UpdateProfileResponseMsg {
  Header header = 1;
  enum Result {
    Success = 0;
    UserNotExists = 1;
    Unspecified = 2;
  }
  Result result = 2;
}

message FriendRequestMsg {
  Header header = 1;
  string friendUserID = 2;
  string helloMsg = 3;
}

message FriendResponseMsg {
  Header header = 1;
  enum Result {
    Success = 0;
    UserNotExists = 1;
    Unspecified = 2;
  }
  Result result = 2;
}

message ApproveRequestMsg {
  Header header = 1;
  string friendUserID = 2;
}

message ApproveResponseMsg {
  Header header = 1;
  enum Result {
    Success = 0;
    RequestNotExists = 1;
    AlreadyApproved = 2;
    Unspecified = 3;
  }
  Result result = 2;
}
